--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,7 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
+.DS_Store
 .idea/
 .env
 .venv
@@ -103,3 +104,6 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# config
+config.py
